# Proj_6---Restaurant_Management_System

./: .dockerignore  .env  Cargo.toml  Dockerfile  Dockerfile.migrations  docker-compose.yml  query.md  sqlx-data.json
migrations/: 000_create_users.sql  001_create_auths.sql  002_create_roles.sql  003_create_addresses.sql  004_create_restaurants.sql  005_create_dishes.sql  006_create_orders.sql
pgdata/base/13445/: 2619
pgdata/base/16384/: 1247  1249  1259  16385  16387  16394  16395  16397  16399  16401  16408  16410  16415  16421  16423  16429  16430  16437  16439  16446  16453  16455  16462  16474  16476  16482  16483  16495  16497  16501  2224  2579  2604  2606  2608  2610  2620  2656  2657  2658  (+18 more)
pgdata/global/: 1260  1262  2671  pg_control
pgdata/pg_stat/: global.stat
src/: error.rs  main.rs  model.rs  service_orders.rs  services_admin.rs  services_subadmin.rs  services_user.rs
