[package]
name = "rms"
version = "0.1.0"
edition = "2021"
default-run = "rms"

[dependencies]
rand = "0.8.4"
sqlx = { version = "0.5.1", features = ["runtime-actix-rustls", "postgres"]}
pwhash = "1"
derive_more = "0.99.0"
dotenv = "0.15.0"
actix-web ="4.2.1"
serde = "1.0.145"
serde_json = "1.0.86"
futures-util = "0.3.28"
include_dir = "0.7.2"
sqlx-pg-migrate = "1.2.0"
